--- a/index.html
+++ b/index.html
@@ -2,35 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | 3-column preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
-
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
-
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="cards">
+    <div class="card card-1">
+      <img src="./images/icon-sedans.svg" class="card__img" alt="Sedan">
+      <div class="card__texts">
+        <h2 class="card__title">SEDANS</h2>
+        <p class="card__paragraph">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+      </div>
+      <a href="#" class="card__button">Learn More</a>
+    </div>
+    <div class="card card-2">
+      <img src="./images/icon-suvs.svg" class="card__img" alt="Suv">
+      <div class="card__texts">
+        <h2 class="card__title">SUVS</h2>
+        <p class="card__paragraph">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
+      </div>
+      <a href="#" class="card__button">Learn More</a>
+    </div>
+    <div class="card card-3">
+      <img src="./images/icon-luxury.svg" class="card__img" alt="Luxury">
+      <div class="card__texts">
+        <h2 class="card__title">LUXURY</h2>
+        <p class="card__paragraph">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
+      </div>
+      <a href="#" class="card__button">Learn More</a>
+    </div>
   </div>
 </body>
 </html>
